fix: css layout bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,7 @@ select:not([size]) {
 }
 button {
   all: unset;
+  user-select: none !important;
 }
 
 .SortTrigger:hover > .SortIcon {
